Atualiza URLs do backend nos arquivos frontend para o Render

--- a/frontend/cadastrar.html
+++ b/frontend/cadastrar.html
@@ -90,7 +90,7 @@
             mensagemDiv.style.color = 'blue';
 
             try {
-                const response = await fetch('http://localhost:3000/usuarios', {
+                const response = await fetch('https://perfildeusuario-e5k2.onrender.com/usuarios', {
                     method: 'POST',
                     body: formData
                 });
