--- a/frontend/deletar.html
+++ b/frontend/deletar.html
@@ -56,7 +56,7 @@
 
 
             try {
-                const response = await fetch(`http://localhost:3000/usuarios/${id}`, {
+                const response = await fetch(`https://perfildeusuario-e5k2.onrender.com/usuarios/${id}`, {
                     method: 'DELETE'
                 });
 
