--- a/frontend/editar.html
+++ b/frontend/editar.html
@@ -86,7 +86,7 @@
 
        async function carregarDadosUsuario(id) {
            try {
-               const response = await fetch(`http://localhost:3000/usuarios/${id}`);
+               const response = await fetch(`https://perfildeusuario-e5k2.onrender.com${id}`);
                const userData = await response.json();
 
                if (response.ok) {
@@ -131,7 +131,7 @@
            mensagemDivEdicao.style.color = 'blue';
 
            try {
-               const response = await fetch(`http://localhost:3000/usuarios/${id}`, {
+               const response = await fetch(`https://perfildeusuario-e5k2.onrender.com/usuarios/${id}`, {
                    method: 'PUT',
                    body: formData
                });
