--- a/frontend/login.html
+++ b/frontend/login.html
@@ -35,7 +35,7 @@
             const senha = document.getElementById('senha').value;
 
             try {
-                const response = await fetch('http://localhost:3000/login', {
+                const response = await fetch('https://perfildeusuario-e5k2.onrender.com/login', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ nome_completo, senha })
