--- a/frontend/perfil.html
+++ b/frontend/perfil.html
@@ -48,7 +48,7 @@
 
         async function carregarDadosDoPerfil(userId) {
             try {
-                const response = await fetch(`http://localhost:3000/usuarios/${userId}`);
+                const response = await fetch(`https://perfildeusuario-e5k2.onrender.com/usuarios/${userId}`);
                 const userData = await response.json();
 
                 if (response.ok) {
@@ -58,12 +58,11 @@
                     estadoSpan.textContent = userData.estado;
                     biografiaSpan.textContent = userData.biografia || 'Nenhuma biografia informada.';
 
-                    if (userData.foto_perfil) {
-                        profileImage.src = `http://localhost:3000${userData.foto_perfil}`;
-                    } else {
-                        profileImage.src = 'https://via.placeholder.com/150';
-                    }
-
+                  if (userData.foto_perfil) {
+                    profileImage.src = `https://perfildeusuario-e5k2.onrender.com${userData.foto_perfil}`;
+                } else {
+                    profileImage.src = 'https://via.placeholder.com/150';
+}
                     editarhtml.href = `editar.html?id=${userId}`;
                     deletarhtml.href = `deletar.html?id=${userId}`;
 
