Renomeia login.html para index.html e ajusta links

--- a/frontend/perfil.html
+++ b/frontend/perfil.html
@@ -83,7 +83,7 @@
             carregarDadosDoPerfil(userId);
         } else {
             alert('Você não está logado.');
-            window.location.href = 'login.html'; 
+            window.location.href = 'index.html'; 
         }
 
         botaoLogOut.addEventListener('click', function(event) {
