--- a/frontend/deletar.html
+++ b/frontend/deletar.html
@@ -66,7 +66,7 @@
                     mensagemDivExclusao.textContent = result.message;
                     mensagemDivExclusao.style.color = 'green';
                     localStorage.removeItem('usuarioId');
-                    window.location.href = 'login.html'; 
+                    window.location.href = 'index.html'; 
                 } else {
                     mensagemDivExclusao.textContent = `Erro ao excluir: ${result.message || 'Ocorreu um erro desconhecido ao excluir.'}`;
                     mensagemDivExclusao.style.color = 'red';
