Correção de redirecionamento de login para index em perfil.html

--- a/frontend/perfil.html
+++ b/frontend/perfil.html
@@ -90,7 +90,7 @@
             event.preventDefault();
             localStorage.removeItem('usuarioId');
             alert('Você foi desconectado.');
-            window.location.href = 'login.html';
+            window.location.href = 'index.html';
         });
     </script>
 
