--- a/frontend/editar.html
+++ b/frontend/editar.html
@@ -86,7 +86,7 @@
 
        async function carregarDadosUsuario(id) {
            try {
-               const response = await fetch(`https://perfildeusuario-e5k2.onrender.com${id}`);
+               const response = await fetch(`https://perfildeusuario-e5k2.onrender.com/usuarios/${id}`);
                const userData = await response.json();
 
                if (response.ok) {
