Correção de link de login para index em cadastrar.html

--- a/frontend/cadastrar.html
+++ b/frontend/cadastrar.html
@@ -74,7 +74,7 @@
     <button type="submit" class="salvar">Cadastrar</button>
     </form>
 
-    <p>Já tem uma conta? <a href='login.html'>Faça login</a></p>
+    <p>Já tem uma conta? <a href='index.html'>Faça login</a></p>
 
     <div id="mensagem"></div>
 
